--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>FITS THE BILL | FRISCO NC</title>
+		<title>PHPJabbers.com | Free Vacation Rental Website Template</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
@@ -58,24 +58,19 @@
 					<div id="main">
 						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 						  <ol class="carousel-indicators">
-						    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+						    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+						    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 						    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-						    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-						    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
 						  </ol>
 						  <div class="carousel-inner">
 						    <div class="carousel-item active">
-						<div class="carousel-item">
-						      <img class="d-block w-100" src="images/slider-image-0-1920x700.jpg" alt="First slide">
-						    </div>
-						<div class="carousel-item">
-						      <img class="d-block w-100" src="images/slider-image-1-1920x700.jpg" alt="Second slide">
+						      <img class="d-block w-100" src="images/slider-image-1-1920x700.jpg" alt="First slide">
 						    </div>
 						    <div class="carousel-item">
-						      <img class="d-block w-100" src="images/slider-image-2-1920x700.jpg" alt="Third slide">
+						      <img class="d-block w-100" src="images/slider-image-2-1920x700.jpg" alt="Second slide">
 						    </div>
 						    <div class="carousel-item">
-						      <img class="d-block w-100" src="images/slider-image-3-1920x700.jpg" alt="Fourth slide">
+						      <img class="d-block w-100" src="images/slider-image-3-1920x700.jpg" alt="Third slide">
 						    </div>
 						  </div>
 						  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
