--- a/index.html
+++ b/index.html
@@ -283,18 +283,15 @@
 								<h2>Contact Info</h2>
 
 								<ul class="alt">
-									<li><span class="fa fa-envelope-o"></span> <a href="#">contact@company.com</a></li>
-									<li><span class="fa fa-phone"></span> +1 333 4040 5566 </li>
-									<li><span class="fa fa-map-pin"></span> 212 Barrington Court New York, ABC 10001 United States of America</li>
+									<li><span class="fa fa-envelope-o"></span> <a href="#">fitsthebillfrisco@gmail.com</a></li>
+									<li><span class="fa fa-map-pin"></span> 51166 Palmetto Drive Frisco, NC 27968</li>
 								</ul>
 
 								<h2>Follow Us</h2>
 
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</section>
 
