--- a/index.html
+++ b/index.html
@@ -61,16 +61,20 @@
 						    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 						    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 						    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 						  </ol>
 						  <div class="carousel-inner">
 						    <div class="carousel-item active">
-						      <img class="d-block w-100" src="images/slider-image-1-1920x700.jpg" alt="First slide">
+						      <img class="d-block w-100" src="images/slider-image-0-1920x700.jpg" alt="First slide">
 						    </div>
 						    <div class="carousel-item">
-						      <img class="d-block w-100" src="images/slider-image-2-1920x700.jpg" alt="Second slide">
+						      <img class="d-block w-100" src="images/slider-image-1-1920x700.jpg" alt="Second slide">
 						    </div>
 						    <div class="carousel-item">
-						      <img class="d-block w-100" src="images/slider-image-3-1920x700.jpg" alt="Third slide">
+						      <img class="d-block w-100" src="images/slider-image-2-1920x700.jpg" alt="Third slide">
+						    </div>
+						    <div class="carousel-item">
+						      <img class="d-block w-100" src="images/slider-image-3-1920x700.jpg" alt="Fourth slide">
 						    </div>
 						  </div>
 						  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
