--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 								<a href="index.html" class="logo">
 									<span class="fa fa-home"></span> <span class="title">Vacation Rental Website</span>
 								</a>
+							<span class="image">
+										<img src="images/logo.png" alt="" />
+									</span>
 
 							<!-- Nav -->
 								<nav>
