--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-							<span class="image">
+							<span class="image"><center>
 										<img src="images/logo.png" alt="" />
-									</span>
+								</center></span>
 
 							<!-- Nav -->
 								<nav>
