--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 							<!-- Logo -->
 							<span class="image"><center>
-										<img src="images/logo.png" alt="" />
+										<img src="images/logo.png" alt="" width="527" 
+     height="205"/>
 								</center></span>
 
 							<!-- Nav -->
