--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 						<div class="inner">
 
 							<!-- Logo -->
-							<span class="image"><center>
-										<img src="images/logo.png" alt="" width="527" 
-     height="205"/>
-								</center></span>
+							
+							<span class="image">div {
+display: flex;
+justify-content: center;
+}
+										<img src="images/logo.png" alt="" width="300" 
+     height="117"/>
+								</div></span>
 
 							<!-- Nav -->
 								<nav>
