--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 						<div class="inner">
 
 							<!-- Logo -->
-							
-							<span class="image">div {
-display: flex;
-justify-content: center;
-}
+							<p align="center">
+  <img width="300" height="117" src="images/logo.png">
+</p>
+							<span class="image">
 										<img src="images/logo.png" alt="" width="300" 
      height="117"/>
-								</div></span>
+								</span>
 
 							<!-- Nav -->
 								<nav>
