--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@
 						<div class="inner">
 							<!-- About Us -->
 							<header id="inner">
-								<h1>Find your new vacation place to stay!</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>A waterman's paradise!</h1>
+								<p>Perfect for boaters, fishermen, windsurfers, and anyone else who enjoys waterfront living!
+
+Enjoy beautiful sunsets and a panoramic view of the Pamlico Sound. Boat access to the sound with a boat ramp at Scotch Bonnet Marina and Gift shop at end of the private street.
+
+Easy sound side launching for kayaks or the ability to wade in the water. Minutes away from the Inlet.</p>
 							</header>
 
 							<br>
