--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								<h1>A waterman's paradise!</h1>
 								<p>Perfect for boaters, fishermen, windsurfers, and anyone else who enjoys waterfront living!
 
-Enjoy beautiful sunsets and a panoramic view of the Pamlico Sound. Boat access to the sound with a boat ramp at Scotch Bonnet Marina and Gift shop at end of the private street.
+Enjoy beautiful sunsets and a panoramic view of the Pamlico Sound.  Located on a deepwater canal with a boat ramp at Scotch Bonnet Marina at the top of the private street.
 
 Easy sound side launching for kayaks or the ability to wade in the water. Minutes away from the Inlet.</p>
 							</header>
