--- a/index.html
+++ b/index.html
@@ -156,13 +156,14 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 							
 							<br>
 
-							<h2 class="h2">Testimonials</h2>
+							<h2 class="h2">Reviews</h2>
 							
 							<div class="row">
 								<div class="col-sm-6 text-center">
-									<p class="m-n"><em>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt delectus mollitia, debitis architecto recusandae? Quidem ipsa, quo, labore minima enim similique, delectus ullam non laboriosam laborum distinctio repellat quas deserunt voluptas reprehenderit dignissimos voluptatum deleniti saepe. Facere expedita autem quos."</em></p>
+									Perfect Vacation!!
+									<p class="m-n"><em>"Awesome house the pictures don’t do it justice. Location was perfect our families pull boats & having a marina right down the street was perfect. Would love to stay at this house again if & when we return to OBX."</em></p>
 
-									<p><strong> - John Doe</strong></p>
+									<p><strong> - Brandon H. - Sep 4, 2022</strong></p>
 								</div>
 
 								<div class="col-sm-6 text-center">
