--- a/index.html
+++ b/index.html
@@ -160,16 +160,17 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 							
 							<div class="row">
 								<div class="col-sm-6 text-center">
-									Perfect Vacation!!
+									<p><strong>Perfect Vacation!!</strong></p>
 									<p class="m-n"><em>"Awesome house the pictures don’t do it justice. Location was perfect our families pull boats & having a marina right down the street was perfect. Would love to stay at this house again if & when we return to OBX."</em></p>
 
-									<p><strong> - Brandon H. - Sep 4, 2022</strong></p>
+									<p> - Brandon H. - Sep 4, 2022</p>
 								</div>
 
 								<div class="col-sm-6 text-center">
-									<p class="m-n"><em>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt delectus mollitia, debitis architecto recusandae? Quidem ipsa, quo, labore minima enim similique, delectus ullam non laboriosam laborum distinctio repellat quas deserunt voluptas reprehenderit dignissimos voluptatum deleniti saepe. Facere expedita autem quos."</em></p>
+									<p><strong>Perfect family getaway</strong></p>
+									<p class="m-n"><em>"Came down with our teenage kids, both sets of grandparents, and their dogs. Property was spacious enough for all and had large family and kitchen area. Kitchen was well-equipped. Excellent sunset views."</em></p>
 
-									<p><strong>- John Doe</strong> </p>
+									<p> - Kyrie S - Sep 13, 2022 </p>
 								</div>
 							</div>
 
