--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 							
 							<div class="row">
 								<div class="col-sm-6 text-center">
-									<p><strong>Perfect Vacation!!</strong></p>
+									<strong>Perfect Vacation!!</strong>
 									<p class="m-n"><em>"Awesome house the pictures don’t do it justice. Location was perfect our families pull boats & having a marina right down the street was perfect. Would love to stay at this house again if & when we return to OBX."</em></p>
 
 									<p> - Brandon H. - Sep 4, 2022</p>
 								</div>
 
 								<div class="col-sm-6 text-center">
-									<p><strong>Perfect family getaway</strong></p>
+									<strong>Perfect family getaway</strong>
 									<p class="m-n"><em>"Came down with our teenage kids, both sets of grandparents, and their dogs. Property was spacious enough for all and had large family and kitchen area. Kitchen was well-equipped. Excellent sunset views."</em></p>
 
 									<p> - Kyrie S - Sep 13, 2022 </p>
