--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 											<label>&nbsp;</label>
 
 											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="primary" /></li>
+												<li><input type="submit" value="Send Message" class="primary" <a href="mailto:jonathanchorsley@gmail.com"/></li>
 											</ul>
 										</div>
 									</div>
