--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 							<section>
 								<h2>Contact Us</h2>
 								<form method="post" action="#">
+									<form action="https://formsubmit.co/fitsthebillfrisco@gmail.com" method="POST">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
