--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 						<div class="inner">
 							<section>
 								<h2>Contact Us</h2>
-								<form method="post" action="#">
-									<form action="https://formsubmit.co/fitsthebillfrisco@gmail.com" method="POST">
+								<form method="post" action="https://formsubmit.co/fitsthebillfrisco@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
