--- a/testimonials.html
+++ b/testimonials.html
@@ -68,13 +68,13 @@
 								<div class="col-sm-6 text-center">
 									<p class="m-n"><em>"Great beach house right on the sound which location our family loves. Our kids had a blast fishing and boating off the dock, the sunset views are outstanding, great sunroom for morning coffee and feeling the breeze, lots of fun water toys all in a secluded setting off the main road. The house is laid off perfect for us. Very clean and plenty of room for all 9 of us to enjoy family time upstairs. The kids enjoyed sleeping downstairs in their own little apartment, upstairs the kitchen was the best stocked kitchen we’ve ever had. Perfect for cooking a few nights in. We will definitely stay here again!"</em></p>
 
-									<p><strong> - Chris W. - July 2023 </strong></p>
+									<p><strong> - Chris W - July 2023 </strong></p>
 								</div>
 
 								<div class="col-sm-6 text-center">
 									<p class="m-n"><em>"We had a great time. The house is gorgeous and right on the water. It's the perfect spot to watch the sunset and star gaze. It is not far from Frisco beach, where we spent a few hours walking/sitting on the beach. The kitchen is fully equipped. We had everything we needed for our stay. Doug was the perfect host. He was very responsive, answering all my questions. I highly recommend staying here; you won't regret it."</em></p>
 
-									<p><strong>- Madeline B. - March 2023</strong> </p>
+									<p><strong>- Madeline B - March 2023</strong> </p>
 								</div>
 							</div>
 
@@ -87,7 +87,14 @@
 									<p><strong> - Isabella L - May 2023</strong></p>
 								</div>
 							</div>
+							
+							<div class="row">
+								<div class="col-sm-6 text-center">
+									<p class="m-n"><em>"Older home but so welcoming and nicely decorated. The peoperty and boat dock were EXACTLY what we wanted. Bring your own fenders. Perfect access to the sound. Doug responded right away when we had a question. Plan to book again."</em></p>
 
+									<p><strong> - Charlotte L - September 2023</strong></p>
+								</div>
+							</div>
 							
 						</div>
 					</div>
