--- a/testimonials.html
+++ b/testimonials.html
@@ -88,6 +88,8 @@
 								</div>
 							</div>
 							
+							<br>
+							
 							<div class="row">
 								<div class="col-sm-6 text-center">
 									<p class="m-n"><em>"Older home but so welcoming and nicely decorated. The peoperty and boat dock were EXACTLY what we wanted. Bring your own fenders. Perfect access to the sound. Doug responded right away when we had a question. Plan to book again."</em></p>
@@ -114,8 +116,7 @@
 							</section>
 
 							<ul class="copyright">
-								<li>Copyright © 2020 Company Name </li>
-								<li>Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></li>
+								<li>Copyright © 2023 FITS THE BILL </li>
 							</ul>
 						</div>
 					</footer>
