--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 								<h2>Contact Info</h2>
 
 								<ul class="alt">
-									<li><span class="fa fa-envelope-o"></span> <a href="#">fitsthebillfrisco@gmail.com</a></li>
-									<li><span class="fa fa-map-pin"></span> 51166 Palmetto Drive Frisco, NC 27968</li>
+									<li><span class="fa fa-envelope-o"></span> <a href="mailto:fitsthebillfrisco@gmail.com">FitsTheBillFrisco@gmail.com</a></li>
+									<li><span class="fa fa-map-pin"></span>Frisco, NC 27968</li>
 								</ul>
 
 								<h2>Follow Us</h2>
