--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 									<strong>Perfect Vacation!!</strong>
 									<p class="m-n"><em>"Awesome house the pictures don’t do it justice. Location was perfect our families pull boats & having a marina right down the street was perfect. Would love to stay at this house again if & when we return to OBX."</em></p>
 
-									<p> - Brandon H - September 2022</p>
+									<p> - Brandon H, September 2022</p>
 								</div>
 
 								<div class="col-sm-6 text-center">
 									<strong>Perfect family getaway</strong>
 									<p class="m-n"><em>"Came down with our teenage kids, both sets of grandparents, and their dogs. Property was spacious enough for all and had large family and kitchen area. Kitchen was well-equipped. Excellent sunset views."</em></p>
 
-									<p> - Kyrie S - September 2022 </p>
+									<p> - Kyrie S, September 2022 </p>
 								</div>
 							</div>
 
@@ -220,8 +220,8 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 								<h2>Contact Info</h2>
 
 								<ul class="alt">
-									<li><span class="fa fa-envelope-o"></span> <a href="mailto:fitsthebillfrisco@gmail.com">FitsTheBillFrisco@gmail.com</a></li>
-									<li><span class="fa fa-map-pin"></span>Frisco, NC 27968</li>
+									<li><span class="fa fa-envelope-o"></span> <a href="mailto:fitsthebillfrisco@gmail.com"> FitsTheBillFrisco@gmail.com</a></li>
+									<li><span class="fa fa-map-pin"></span> Frisco, NC 27968</li>
 								</ul>
 
 								<h2>Follow Us</h2>
