--- a/testimonials.html
+++ b/testimonials.html
@@ -21,6 +21,15 @@
 								<span class="fa fa-home"></span> <span class="title">Vacation Rental Website</span>
 							</a>
 
+						
+							<!-- Logo -->
+							<p align="center">
+							 <a href="index.html" class="logo">
+								<img width="300" height="117" src="images/logo.png">
+							 </a>
+</p>
+
+
 						<!-- Nav -->
 							<nav>
 								<ul>
