--- a/testimonials.html
+++ b/testimonials.html
@@ -61,7 +61,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Testimonials</h1>
+							<h1>Reviews</h1>
 
 							<div class="image main">
 								<img src="images/banner-image-3-1920x500.jpg" class="img-fluid" alt="" />
