--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 								<ul>
 									<li><a href="about.html">About Us</a></li>
-									<li><a href="testimonials.html">Testimonials</a></li>
+									<li><a href="testimonials.html">Reviews</a></li>
 									<li><a href="terms.html">Terms</a></li>
 								</ul>
 							</li>
