--- a/reviews.html
+++ b/reviews.html
@@ -50,7 +50,7 @@
 
 							<ul>
 								<li><a href="about.html">About Us</a></li>
-								<li><a href="testimonials.html" class="active">Testimonials</a></li>
+								<li><a href="reviews.html" class="active">Testimonials</a></li>
 								<li><a href="terms.html">Terms</a></li>
 							</ul>
 						</li>
