--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 								<ul>
 									<li><a href="about.html">About Us</a></li>
-									<li><a href="testimonials.html">Reviews</a></li>
+									<li><a href="reviews.html">Reviews</a></li>
 									<li><a href="terms.html">Terms</a></li>
 								</ul>
 							</li>
@@ -174,7 +174,7 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 								</div>
 							</div>
 
-							<p class="text-center"><a href="testimonials.html">Read More &nbsp;<i class="fa fa-long-arrow-right"></i></a></p>
+							<p class="text-center"><a href="reviews.html">Read More &nbsp;<i class="fa fa-long-arrow-right"></i></a></p>
 
 							<br>
 
