--- a/vacations.html
+++ b/vacations.html
@@ -13,13 +13,16 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+				<header id="header">
+					<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="fa fa-home"></span> <span class="title">Vacation Rental Website</span>
-								</a>
+							<p align="center">
+							 <a href="index.html" class="logo">
+								<img width="300" height="117" src="images/logo.png">
+							 </a>
+</p>
+
 
 							<!-- Nav -->
 								<nav>
