--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>PHPJabbers.com | Free Vacation Rental Website Template</title>
+		<title>FITS THE BILL | Frisco, NC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
@@ -16,10 +16,13 @@
 				<header id="header">
 					<div class="inner">
 
-						<!-- Logo -->
-							<a href="index.html" class="logo">
-								<span class="fa fa-home"></span> <span class="title">Vacation Rental Website</span>
-							</a>
+							<!-- Logo -->
+							<p align="center">
+							 <a href="index.html" class="logo">
+								<img width="300" height="117" src="images/logo.png">
+							 </a>
+</p>
+
 
 						<!-- Nav -->
 							<nav>
