--- a/vacations.html
+++ b/vacations.html
@@ -49,7 +49,7 @@
 
 								<ul>
 									<li><a href="about.html">About Us</a></li>
-									<li><a href="testimonials.html">Testimonials</a></li>
+									<li><a href="reviews.html">Reviews</a></li>
 									<li><a href="terms.html">Terms</a></li>
 								</ul>
 							</li>
