--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 						<div class="inner">
 							<section>
 								<h2>Contact Us</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://formsubmit.co/fitsthebillfrisco@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -102,9 +102,9 @@
 								<h2>Contact Info</h2>
 
 								<ul class="alt">
-									<li><span class="fa fa-envelope-o"></span> <a href="#">contact@company.com</a></li>
-									<li><span class="fa fa-phone"></span> +1 333 4040 5566 </li>
-									<li><span class="fa fa-map-pin"></span> 212 Barrington Court New York, ABC 10001 United States of America</li>
+									<li><span class="fa fa-envelope-o"></span> <a href="mailto:fitsthebillfrisco@gmail.com">FitsTheBillFrisco@gmail.com</a></li>
+									<li><span class="fa fa-phone"></span> 252-219-0197 </li>
+									<li><span class="fa fa-map-pin"></span> Frisco, NC 27968</li>
 								</ul>
 
 								<h2>Follow Us</h2>
