Update contact.html 1

--- a/contact.html
+++ b/contact.html
@@ -118,8 +118,7 @@
 							</section>
 
 							<ul class="copyright">
-								<li>Copyright © 2020 Company Name </li>
-								<li>Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></li>
+								<li>Copyright © 2023 Fits The Bill</li>
 							</ul>
 						</div>
 					</footer>
