--- a/reviews.html
+++ b/reviews.html
@@ -35,28 +35,18 @@
 				</header>
 
 			<!-- Menu -->
-				<nav id="menu">
-					<h2>Menu</h2>
-					
-					<ul>
-						<li><a href="index.html">Home</a></li>
+					<nav id="menu">
+						<h2>Menu</h2>
+						<ul>
+							<li><a href="index.html">Home</a></li>
 
-						<li><a href="vacations.html">Vacations</a></li>
+							<li><a href="vacations.html" class="active">Vacations</a></li>
 
-						<li><a href="blog.html">Blog</a></li>
-
-						<li>
-							<a href="#" class="dropdown-toggle">About</a>
-
-							<ul>
-								<li><a href="about.html">About Us</a></li>
-								<li><a href="reviews.html" class="active">Testimonials</a></li>
-								<li><a href="terms.html">Terms</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact Us</a></li>
-					</ul>
-				</nav>
+							<li><a href="reviews.html" class="active">Reviews</a></li>
+							
+							<li><a href="contact.html">Contact Us</a></li>
+						</ul>
+					</nav>
 
 				<!-- Main -->
 					<div id="main">
