--- a/contact.html
+++ b/contact.html
@@ -39,20 +39,11 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 
-							<li><a href="vacations.html">Vacations</a></li>
+							<li><a href="vacations.html" class="active">Vacations</a></li>
 
-							<li><a href="blog.html">Blog</a></li>
-
-							<li>
-								<a href="#" class="dropdown-toggle">About</a>
-
-								<ul>
-									<li><a href="about.html">About Us</a></li>
-									<li><a href="reviews.html">Reviews</a></li>
-									<li><a href="terms.html">Terms</a></li>
-								</ul>
-							</li>
-							<li><a href="contact.html" class="active">Contact Us</a></li>
+							<li><a href="reviews.html" class="active">Reviews</a></li>
+							
+							<li><a href="contact.html">Contact Us</a></li>
 						</ul>
 					</nav>
 
