--- a/reviews.html
+++ b/reviews.html
@@ -40,9 +40,9 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 
-							<li><a href="vacations.html" class="active">Vacations</a></li>
+							<li><a href="vacations.html">Vacations</a></li>
 
-							<li><a href="reviews.html" class="active">Reviews</a></li>
+							<li><a href="reviews.html">Reviews</a></li>
 							
 							<li><a href="contact.html">Contact Us</a></li>
 						</ul>
