--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Contact Us</h2>
+								<h2>Message Us</h2>
 								<form method="post" action="https://formsubmit.co/fitsthebillfrisco@gmail.com">
 									<div class="fields">
 										<div class="field half">
@@ -213,12 +213,6 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 									<li><span class="fa fa-map-pin"></span> Frisco, NC 27968</li>
 								</ul>
 
-								<h2>Follow Us</h2>
-
-								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								</ul>
 							</section>
 
 							<ul class="copyright">
