--- a/contact.html
+++ b/contact.html
@@ -98,18 +98,11 @@
 									<li><span class="fa fa-map-pin"></span> Frisco, NC 27968</li>
 								</ul>
 
-								<h2>Follow Us</h2>
-
-								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								</ul>
+			
 							</section>
 
 							<ul class="copyright">
-								<li>Copyright © 2023 Fits The Bill</li>
+								<li>Copyright © 2023 FITS THE BILL</li>
 							</ul>
 						</div>
 					</footer>
