Update index.html 1

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@ Easy sound side launching for kayaks or the ability to wade in the water. Minute
 
 								<ul class="alt">
 									<li><span class="fa fa-envelope-o"></span> <a href="mailto:fitsthebillfrisco@gmail.com"> FitsTheBillFrisco@gmail.com</a></li>
+									<li><span class="fa fa-phone"></span> 252-219-0197 </li>
 									<li><span class="fa fa-map-pin"></span> Frisco, NC 27968</li>
 								</ul>
 
