--- a/contact.html
+++ b/contact.html
@@ -48,19 +48,12 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1>Contact Us</h1>
-							<span class="image main"><img src="images/map.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-						</div>
-					</div>
-
+			
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Contact Us</h2>
+								<h2>Message Us</h2>
 								<form method="post" action="https://formsubmit.co/fitsthebillfrisco@gmail.com">
 									<div class="fields">
 										<div class="field half">
