--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 							<!-- About Us -->
 							<header id="inner">
 								<h1>A waterman's paradise!</h1>
-								<p>Perfect for boaters, fishermen, windsurfers, and anyone else who enjoys waterfront living!
+								<p>Perfect for boaters, fishermen, kiteboarders, and anyone else who enjoys waterfront living!<br><br>
 
-Enjoy beautiful sunsets and a panoramic view of the Pamlico Sound.  Located on a deepwater canal with a boat ramp at Scotch Bonnet Marina at the top of the private street.
+Enjoy beautiful sunsets and a panoramic view of the Pamlico Sound.  Located on a deepwater canal with a boat ramp at Scotch Bonnet Marina at the top of the private street.<br><br>
 
 Easy sound side launching for kayaks or the ability to wade in the water. Minutes away from the Inlet.</p>
 							</header>
