--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 Enjoy beautiful sunsets and a panoramic view of the Pamlico Sound.  Located on a deepwater canal with a boat ramp at Scotch Bonnet Marina at the top of the private street.<br><br>
 
-Easy sound side launching for kayaks or the ability to wade in the water. Minutes away from the Inlet.</p>
+Easy sound side launching for kayaks, stand up paddleboards, or the ability to wade in the water. <br><br>Only minutes away from Hatteras Inlet.</p>
 							</header>
 
 							<br>							
