--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 							<!-- About Us -->
 							<header id="inner">
 								<h1>A waterman's paradise!</h1>
-								<p>Perfect for boaters, fishermen, kiteboarders, and anyone else who enjoys waterfront living!<br><br>
+								<p>Perfect for boaters, fishermen, kiteboarders, and anyone else who enjoys waterfront living!
 
-Enjoy beautiful sunsets and a panoramic view of the Pamlico Sound.  Located on a deepwater canal with a boat ramp at Scotch Bonnet Marina at the top of the private street.<br><br>
+Enjoy beautiful sunsets and a panoramic view of the Pamlico Sound.  Located on a deepwater canal with a boat ramp at Scotch Bonnet Marina at the top of the private street.
 
-Easy sound side launching for kayaks, stand up paddleboards, or the ability to wade in the water. <br><br>Only minutes away from Hatteras Inlet.</p>
+Easy sound side launching for kayaks, stand up paddleboards, or the ability to wade in the water.  Only minutes away from Hatteras Inlet.</p>
 							</header>
 
 							<br>							
