--- a/index.html
+++ b/index.html
@@ -104,20 +104,22 @@ Easy sound side launching for kayaks, stand up paddleboards, or the ability to w
 										<img src="images/product-1-720x480.jpg" alt="" />
 									</span>
 									<a href="https://www.vrbo.com/3142003?unitId=3715096">
+										<div>
 										<h2>
 										Five bedroom
 										<p>
 										Three bath
-										<br><br><br><br>
+										<br>
 										sleeps 11
 										</P>
 										</h2>
-										
+									
 										<p><strong>$200 - $500</strong></p>
 
 										<p>
 											<i class="fa fa-map-marker"></i> Frisco, NC
 		                                </p>
+										</div>
 									</a>
 								</article>
 								<article class="style2">
