--- a/index.html
+++ b/index.html
@@ -138,6 +138,21 @@ Easy sound side launching for kayaks, stand up paddleboards, or the ability to w
 										<p>
 											<i class="fa fa-map-marker"></i> Frisco, NC
 		                                </p>
+<div
+    class="igms-direct-booking-widget"
+    id="directBooking1704559447487"
+    data-listing-id="undefined-listing-uuid"
+    data-widget-color="#1F88E5"
+    data-text-check-availability="Check Availability"
+    data-text-book-now="Book Now"
+    data-preview="true"
+></div>
+<script
+    src="//www.igms.com/app/widgets/direct-booking/widget.js?v=27976"
+    type="application/javascript"
+></script>
+
+										
 									</a>
 								</article>
 								<article class="style3">
